[package]
name = "eon-rs"
description = "A reference parser for EON (Extensible Object Notation)"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/TheArchitect4855/eon-rs"
repository = "https://github.com/TheArchitect4855/eon-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
